<resources>
    <string name="txt_input_kkk">"kkk.db"</string>
	<string name="txt_input_kbb">"kbb.db"</string>
	<string name="txt_input_kjv">"kjv.db"</string>
    <string name="txt_folder_path">"/data/data/book.bible.hymn.mipark/databases"</string>
    <string name="txt_kkk_path">"/data/data/book.bible.hymn.mipark/databases/kkk.db"</string>
	<string name="txt_kbb_path">"/data/data/book.bible.hymn.mipark/databases/kbb.db"</string>
	<string name="txt_kjv_path">"/data/data/book.bible.hymn.mipark/databases/kjv.db"</string>
	<string name="tab_menu_0">"Old"</string>
	<string name="tab_menu_1">"New"</string>
    <string name="tab_menu_2">"Old Hymn"</string>
    <string name="tab_menu_3">"New Hymn"</string>
    <string name="tab_menu_4">"Dictionary"</string>
    <string name="tab_menu_5">"Note"</string>
    <string name="tab_menu_6">"Prayer"</string>
    <string name="tab_menu_7">"Sermon"</string>
    <string name="tab_menu_8">"Worship"</string>
    <string name="app_name">Bible</string>
    <string name="app_name_short">Bible</string>
    <string name="txt_edit_hint">"Please enter a search term."</string>
    <string name="txt_no_data">"There is no data"</string>
    <string name="txt_song_nodata">"Data connection is poor\nPlease try again after checking the connection status"</string>
    <string name="txt_hymn_ready">"Ready...."</string>
    <string name="txt_hymn_ready2">"Press the Play button to begin playing"</string>
    <string name="txt_hymn_toast">"Zoom In/Out Support"</string>
    <string name="txt_hymnsong_url_old">"62C47DBC60A9D1D28293D3DA1CDBB45F3D680611C5706AD69F0EB0E68772D5C72D375E4C86C07C5D83BD372BC1CB4258"</string>
    <string name="txt_hymnsong_url_new">"62C47DBC60A9D1D28293D3DA1CDBB45F3D680611C5706AD69F0EB0E68772D5C77190A1F3AC2151E1ABACA87265891915"</string>
    <string name="txt_hymnlyrics_url_old">"62C47DBC60A9D1D28293D3DA1CDBB45F3D680611C5706AD69F0EB0E68772D5C7D3ACA9FF73EA06F5400EE953C3341114"</string>
	<string name="txt_hymnlyrics_url_new">"62C47DBC60A9D1D28293D3DA1CDBB45F3D680611C5706AD69F0EB0E68772D5C7D8C9F1109A16D32A77445A0BBBB2353C"</string>
    <string name="txt_hymn_type">".mp3"</string>
    <string name="txt_back">"'Pressing' the Back button will exit once more."</string>
    <string name="txt_after_ad">"After Advertising Finish! We apologize for any inconvenience!"</string>
    <string name="txt_play_next_cancel">There is no playing data.</string>
    <string name="txt_background_play">Playing in the background</string>
    <string name="txt_hymn_continue_true">"It is played continuously in succession"</string>
    <string name="txt_hymn_continue_false">"Only one song is played."</string>
    <string name="txt_setting_alert_title">Setting</string>
    <string name="txt_setting_alert0">SelectBible1</string>
    <string name="txt_setting_alert1">SelectBible2</string>
    <string name="txt_setting_alert2">AudioSpeed</string>
    <string name="txt_setting_alert3">TextColor</string>
    <string name="txt_setting_alert4">BackgroundColor</string>
    <string name="txt_setting_alert5">Search</string>
    <string name="txt_setting_alert6">ContactUs</string>
    <string name="txt_setting_alert7">Sponsoring</string>
    <string name="txt_setting_alert8">ThisApp Share</string>
    <string name="txt_setting_alert9">Prayer</string>
    <string name="txt_setting_alert10">WriteNote</string>
    <string name="txt_setting_alert11">SwipeMode</string>
    <string name="txt_setting_alert12">ScrollSpeed</string>
    <string name="alert_msg_swipe">"NavigationTab Swipe"</string>
    <string name="toast_msg_swipe">"Has been set. It will be reflected after the next execution after app termination"</string>
    <string name="intent_app_share">"ThisApp Share"</string>
    <string name="app_share_link">"https://play.google.com/store/apps/details?id=book.bible.hymn.mipark"</string>
    <string name="toast_ad">"Thank you for watching the ad."</string>
    <string name="txt_bible_list_none">None</string>
    <string name="txt_bible_list1">개역개정판</string>
    <string name="txt_bible_list2">개역한글판</string>
    <string name="txt_bible_list3">KingJamesBible</string>
    <string name="txt_bible_list4">日本語 新改譯</string>
    <string name="txt_bible_list5">中文 K J V 上帝版繁體</string>
    <string name="txt_bible_list6">FrenchDarby</string>
    <string name="txt_bible_list7">GermanLuther</string>
    <string name="txt_bible_list8">Greek Bible</string>
    <string name="txt_bible_list9">IndonesianBaru</string>
    <string name="txt_bible_list10">Portugal</string>
    <string name="txt_bible_list11">RussianSynodal</string>
    <string name="txt_bible_list12">ALBANIAN</string>
    <string name="txt_bible_list13">ASV</string>
    <string name="txt_bible_list14">Arabic VanDyke Smith</string>
    <string name="txt_bible_list15">바른성경</string>
    <string name="txt_bible_list16">中文 和合 本繁體</string>
    <string name="txt_bible_list17">中文 和合 本简体</string>
    <string name="txt_bible_list18">中文 新译 本繁體</string>
    <string name="txt_bible_list19">中文 K J V 神版简体</string>
    <string name="txt_bible_list20">中文 K J V 上帝版简体</string>
    <string name="txt_bible_list21">中文 K J V 神版繁體</string>
    <string name="txt_bible_list22">Hebrew Stuttgartensia</string>
    <string name="txt_bible_list23">Hebrew 1976 Modern</string>
    <string name="txt_bible_list24">Hebrew WLC</string>
    <string name="txt_bible_list25">IndianHindi</string>
    <string name="txt_bible_list26">Indian Tamil</string>
    <string name="txt_bible_list27">日本語 口語譯</string>
    <string name="txt_bible_list28">ReinaValera1960</string>
    <string name="txt_bible_list29">Tagalog</string>
    <string name="txt_bible_list30">Turkish</string>
    <string name="txt_bible_list31">WEB</string>
	<string name="txt_input_jpnnew">"jpnnew.db"</string>
	<string name="txt_input_ckb">"ckb.db"</string>
	<string name="txt_input_frenchdarby">"frenchdarby.db"</string>
	<string name="txt_input_germanluther">"germanluther.db"</string>
	<string name="txt_input_gst">"gst.db"</string>
	<string name="txt_input_indonesianbaru">"indonesianbaru.db"</string>
	<string name="txt_input_portugal">"portugal.db"</string>
	<string name="txt_input_russiansynodal">"russiansynodal.db"</string>
	<string name="txt_input_alb">"alb.db"</string>
	<string name="txt_input_asv">"asv.db"</string>
	<string name="txt_input_avs">"avs.db"</string>
	<string name="txt_input_barun">"barun.db"</string>
	<string name="txt_input_chb">"chb.db"</string>
	<string name="txt_input_chg">"chg.db"</string>
	<string name="txt_input_cjb">"cjb.db"</string>
	<string name="txt_input_ckc">"ckc.db"</string>
	<string name="txt_input_ckg">"ckg.db"</string>
	<string name="txt_input_cks">"cks.db"</string>
	<string name="txt_input_hebbhs">"hebbhs.db"</string>
	<string name="txt_input_hebmod">"hebmod.db"</string>
	<string name="txt_input_hebwlc">"hebwlc.db"</string>
	<string name="txt_input_indianhindi">"indianhindi.db"</string>
	<string name="txt_input_indiantamil">"indiantamil.db"</string>
	<string name="txt_input_jpnold">"jpnold.db"</string>
	<string name="txt_input_reina">"reina.db"</string>
	<string name="txt_input_tagalog">"tagalog.db"</string>
	<string name="txt_input_tkh">"tkh.db"</string>
	<string name="txt_input_web">"web.db"</string>
	<string name="txt_jpnnew_path">"/data/data/book.bible.hymn.mipark/databases/jpnnew.db"</string>
	<string name="txt_ckb_path">"/data/data/book.bible.hymn.mipark/databases/ckb.db"</string>
	<string name="txt_frenchdarby_path">"/data/data/book.bible.hymn.mipark/databases/frenchdarby.db"</string>
	<string name="txt_germanluther_path">"/data/data/book.bible.hymn.mipark/databases/germanluther.db"</string>
	<string name="txt_gst_path">"/data/data/book.bible.hymn.mipark/databases/gst.db"</string>
	<string name="txt_indonesianbaru_path">"/data/data/book.bible.hymn.mipark/databases/indonesianbaru.db"</string>
	<string name="txt_portugal_path">"/data/data/book.bible.hymn.mipark/databases/portugal.db"</string>
	<string name="txt_russiansynodal_path">"/data/data/book.bible.hymn.mipark/databases/russiansynodal.db"</string>
	<string name="txt_alb_path">"/data/data/book.bible.hymn.mipark/databases/alb.db"</string>
	<string name="txt_asv_path">"/data/data/book.bible.hymn.mipark/databases/asv.db"</string>
	<string name="txt_avs_path">"/data/data/book.bible.hymn.mipark/databases/avs.db"</string>
	<string name="txt_barun_path">"/data/data/book.bible.hymn.mipark/databases/barun.db"</string>
	<string name="txt_chb_path">"/data/data/book.bible.hymn.mipark/databases/chb.db"</string>
	<string name="txt_chg_path">"/data/data/book.bible.hymn.mipark/databases/chg.db"</string>
	<string name="txt_cjb_path">"/data/data/book.bible.hymn.mipark/databases/cjb.db"</string>
	<string name="txt_ckc_path">"/data/data/book.bible.hymn.mipark/databases/ckc.db"</string>
	<string name="txt_ckg_path">"/data/data/book.bible.hymn.mipark/databases/ckg.db"</string>
	<string name="txt_cks_path">"/data/data/book.bible.hymn.mipark/databases/cks.db"</string>
	<string name="txt_hebbhs_path">"/data/data/book.bible.hymn.mipark/databases/hebbhs.db"</string>
	<string name="txt_hebmod_path">"/data/data/book.bible.hymn.mipark/databases/hebmod.db"</string>
	<string name="txt_hebwlc_path">"/data/data/book.bible.hymn.mipark/databases/hebwlc.db"</string>
	<string name="txt_indianhindi_path">"/data/data/book.bible.hymn.mipark/databases/indianhindi.db"</string>
	<string name="txt_indiantamil_path">"/data/data/book.bible.hymn.mipark/databases/indiantamil.db"</string>
	<string name="txt_jpnold_path">"/data/data/book.bible.hymn.mipark/databases/jpnold.db"</string>
	<string name="txt_reina_path">"/data/data/book.bible.hymn.mipark/databases/reina.db"</string>
	<string name="txt_tagalog_path">"/data/data/book.bible.hymn.mipark/databases/tagalog.db"</string>
	<string name="txt_tkh_path">"/data/data/book.bible.hymn.mipark/databases/tkh.db"</string>
	<string name="txt_web_path">"/data/data/book.bible.hymn.mipark/databases/web.db"</string>
    <string name="txt_menu_bottom1">Zoom(-)</string>
    <string name="txt_menu_bottom2">Zoom(+)</string>
    <string name="txt_menu_bottom3">Scroll</string>
    <string name="txt_menu_bottom4">Pre</string>
    <string name="txt_menu_bottom5">Next</string>
    <string name="txt_menu_bottom6">Setting</string>
    <string name="txt_menu_bottom7">Sponsoring</string>
    <string name="txt_menu_bottom8">Search</string>
    <string name="txt_menu_bottom9">Mark</string>
    <string name="txt_audiospeed_after">"After stopping audio please choose"</string>
    <string name="txt_audiospeed_list1">"Normal"</string>
    <string name="txt_audiospeed_list2">"Fast"</string>
    <string name="txt_swipemode_list1">"Enable"</string>
    <string name="txt_swipemode_list2">"Disable"</string>
   <string name="txt_scroll_speed_1">"1x"</string>
   <string name="txt_scroll_speed_2">"2x"</string>
   <string name="txt_scroll_speed_3">"3x"</string>
    <string name="txt_jang">" "</string>
    <string name="txt_jul">" "</string>
    <string name="txt_bt_kwon1">"Old"</string>
	<string name="txt_bt_kwon2">"New"</string>
    <string name="txt_kwon_kbb1">"Genesis"</string>
	<string name="txt_kwon_kbb2">"Exodus"</string>
	<string name="txt_kwon_kbb3">"Leviticus"</string>
	<string name="txt_kwon_kbb4">"Numbers"</string>
	<string name="txt_kwon_kbb5">"Deuteronomy"</string>
	<string name="frg_action_menu_1_1">Select all</string>
    <string name="frg_action_menu_2">Note</string>
    <string name="frg_action_menu_3">Share</string>
	<string name="frg_ccm_07">"Select All"</string>
	<string name="frg_ccm_09">"MediaPlay"</string>
	<string name="frg_ccm_10">"VideoView"</string>
	<string name="frg_ccm_15">"Favorites"</string>
	<string name="activity_podcast_15">There is no data</string>
    <string name="activity_podcast_22">"There is no data"</string>
    <string name="activity_search_01">"Please enter your search term."</string>
    <string name="activity_search_02">"Tip.Setting-SelectBible1 based on\nThere is no data!"</string>
</resources>