<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:background="#00000000" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
  <Button android:id="@+id/Bottom_01" android:background="@color/transparent" android:drawableTop="@drawable/btn_bg_ic_action_zoom_out" android:layout_width="0dip" android:layout_weight="1" android:layout_height="wrap_content" android:gravity="bottom|center" android:text="@string/txt_menu_bottom1" android:textColor="#000000" android:textSize="10sp" android:textStyle="bold" android:paddingTop="10dip"/>
  <Button android:id="@+id/Bottom_02" android:background="@color/transparent" android:drawableTop="@drawable/btn_bg_ic_action_zoom_in" android:layout_width="0dip" android:layout_weight="1" android:layout_height="wrap_content" android:gravity="bottom|center" android:text="@string/txt_menu_bottom2" android:textColor="#000000" android:textSize="10sp" android:textStyle="bold" android:paddingTop="10dip"/>
  <Button android:id="@+id/Bottom_03" android:background="@color/transparent" android:drawableTop="@drawable/ic_action_down" android:layout_width="0dip" android:layout_weight="1" android:layout_height="wrap_content" android:gravity="bottom|center" android:text="@string/txt_menu_bottom3" android:textColor="#000000" android:textSize="10sp" android:textStyle="bold" android:paddingTop="10dip"/>
</LinearLayout>
