<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">
    <include
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      layout="@layout/layout_default_title" />
	<LinearLayout 
	    android:gravity="center"
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
	    	<EditText
		        android:id="@+id/edit_seacher"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@color/white"
		        android:drawablePadding="5dp"
		        android:hint="@string/activity_search_01"
		        android:imeOptions="actionSearch"
		        android:inputType="text"
		        android:lines="1"
		        android:padding="10dp"
		        android:text=""
		        android:textColorHint="#80000000"
		        android:textSize="@dimen/text_m" />
	    	<!-- android:drawableLeft="@drawable/search_icon" -->
	    	</FrameLayout>
	    	<ImageButton
			    android:visibility="invisible"
	            android:id="@+id/bt_search_result"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignRight="@+id/edit_searcher"
	            android:background="@drawable/search_icon"/>
	</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/list_line" />
    
    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1">
		<LinearLayout
			 android:id="@+id/layout_listview_search"    
		     android:orientation="vertical" 
		     android:layout_width="fill_parent"
		     android:layout_height="fill_parent"
		     android:visibility="gone">
			<ListView
		        android:id="@+id/listview_search"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:cacheColorHint="#00000000"
		        android:divider="#4aace5"
		        android:dividerHeight="0.5dp"/>
		</LinearLayout>
		<LinearLayout
	        android:id="@+id/layout_nodata"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="center"
			android:visibility="visible">
	        <TextView
	            android:id="@+id/txt_search_nodata"
	            android:text="@string/activity_search_02"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:textSize="@dimen/text_m"/>
         </LinearLayout>
	</RelativeLayout>
	<LinearLayout 
	    android:id="@+id/action_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:visibility="gone" >
        <Button
            android:id="@+id/bt_action1"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/frg_action_menu_1_1"
            android:textSize="@dimen/text_b"
            android:textColor="@drawable/btn_text_selector"
            android:background="@drawable/btn_rounded_corner"/>
        <Button
            android:id="@+id/bt_action2"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/frg_action_menu_2"
            android:textSize="@dimen/text_b"
            android:textColor="@drawable/btn_text_selector"
            android:background="@drawable/btn_rounded_corner"/>
        <Button
            android:id="@+id/bt_action3"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/frg_action_menu_3"
            android:textSize="@dimen/text_b"
            android:textColor="@drawable/btn_text_selector"
            android:background="@drawable/btn_rounded_corner"/>
	</LinearLayout>
		    <RelativeLayout
		          android:visibility="gone"
		          android:id="@+id/admob_native"
		          android:layout_width="match_parent"
		          android:layout_height="wrap_content"
		          android:layout_gravity="center_horizontal"
		          android:gravity="center"> 
		    </RelativeLayout>	
	<RelativeLayout
          android:id="@+id/ad_layout"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content" 
          android:layout_gravity="center_horizontal"> 
    </RelativeLayout>
	<LinearLayout
	    android:visibility="gone" 
	    android:id="@+id/layout_bottom"
	    android:gravity="bottom"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:background="#50e3e3e3">
        <include 
            layout="@layout/layout_menu_bottom_search" />
    </LinearLayout>
</LinearLayout>