<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ffffff">
    <include
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      layout="@layout/layout_default_title" />
		<View
	        android:layout_width="match_parent"
	        android:layout_height="2px"
	        android:background="@color/list_line" />
		<RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1">
		<LinearLayout
			 android:id="@+id/layout_listview_main"    
		     android:orientation="vertical" 
		     android:layout_width="fill_parent"
		     android:layout_height="fill_parent"
		     android:visibility="visible">
			<ListView
		        android:id="@+id/listview"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:cacheColorHint="#00000000"
		        android:divider="#4aace5"
		        android:dividerHeight="0.5dp"/>
		</LinearLayout>
		<LinearLayout
	        android:id="@+id/layout_nodata"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="center|top"
			android:layout_marginTop="120dip"
			android:visibility="gone">
	        <TextView
	            android:id="@+id/txt_nodata"
	            android:text="@string/activity_podcast_22"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:textSize="@dimen/text_m"/>
         </LinearLayout>  
         <LinearLayout
                android:visibility="gone" 
                android:orientation="vertical"
                android:id="@+id/layout_progress" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:layout_centerInParent="true" 
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">
          <ProgressBar
                android:layout_gravity="center" 
                android:id="@android:id/progress"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                style="?android:progressBarStyle" />
          </LinearLayout>           
	</RelativeLayout>
	
	<LinearLayout 
	    android:id="@+id/action_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:visibility="visible" >
        <Button
            android:id="@+id/bt_action1"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/frg_ccm_07"
            android:textSize="@dimen/text_b"
            android:textColor="@drawable/btn_text_selector"
            android:background="@drawable/btn_rounded_corner"/>
        <Button
            android:id="@+id/bt_action2"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/frg_ccm_09"
            android:textSize="@dimen/text_b"
            android:textColor="@drawable/btn_text_selector"
            android:background="@drawable/btn_rounded_corner"/>
        <Button
            android:id="@+id/bt_action3"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/frg_ccm_10"
            android:textSize="@dimen/text_b"
            android:textColor="@drawable/btn_text_selector"
            android:background="@drawable/btn_rounded_corner"/>
	</LinearLayout>
		    <RelativeLayout
		          android:visibility="gone"
		          android:id="@+id/admob_native"
		          android:layout_width="match_parent"
		          android:layout_height="wrap_content"
		          android:layout_gravity="center_horizontal"
		          android:gravity="center"> 
		    </RelativeLayout>	
			<RelativeLayout
			    	  android:visibility="visible" 
			          android:id="@+id/ad_layout"
			          android:layout_width="fill_parent"
			          android:layout_height="wrap_content" 
			          android:layout_gravity="center_horizontal"> 
		    </RelativeLayout>
</LinearLayout>